apps/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  ports:
    - name: http
      port: 7878
      targetPort: 7878
  selector:
    app: radarr
